Add media queries to make the website responsive.

--- a/alphabet.html
+++ b/alphabet.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hebrew Language is a page for people who want to learn about Hebrew language">
     <meta name="keywords" content="language, Hebrew language, Hebrew alphabet, language learning">
+    <link rel="stylesheet" href="assets/css/normalize.css">
 
     <link rel="stylesheet" href="assets/css/style.css">
 
