--- a/index.html
+++ b/index.html
@@ -7,24 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hebrew Language is a page for people who want to learn about Hebrew language">
     <meta name="keywords" content="language, Hebrew language, Hebrew alphabet, language learning">
+    <link rel="stylesheet" href="assets/css/normalize.css">
 
     <link rel="stylesheet" href="assets/css/style.css">
-
     <title>Hebrew Language</title>
 </head>
 
 <body>
+    
     <div id="header-image">
-
     </div>
-
-
     <header>
-
         <nav id="menu">
-
             <ul>
-
                 <li>
                     <a href="index.html" class="active">Home</a>
                 </li>
@@ -36,15 +31,11 @@
                 <li>
                     <a href="words.html">Common Hebrew Words and Phrases</a>
                 </li>
-
             </ul>
         </nav>
-
-
     </header>
 
     <h1>The Hebrew Language</h1>
-
     <section>
 
         <div id="div-home-image">
@@ -54,7 +45,6 @@
         </div>
 
         <div class="main-container">
-
             <h2>Introduction to the Hebrew Language</h2>
             <br>
             <p>
@@ -97,48 +87,63 @@
                 the time of the Babylonian captivity.
 
             </p>
-                <h2><i>Lashon HaKodesh</i> - Hebrew as a holy language</h2>
+            <h2><i>Lashon HaKodesh</i> - Hebrew as a holy language</h2>
             <p> Hebrew stopped being used as a day to day language over two millennia ago, and it was only mainly used
-                for religious activities and for liturgy. According to Genesis, God created the world using words, which meant that the Hebrew language is holy. 
+                for religious activities and for liturgy. According to Genesis, God created the world using words, which
+                meant that the Hebrew language is holy.
                 This led to a mystification of the language in Judaism, which meant
-                that this is not just an ordinary language, it is the language of God and it should be used properly.  
-                Many Jewish movements focused on studying the Hebrew language, for example Kabbalah, the esoteric Jewish 
-                mysticism, talks about a secret language code hidden in the Hebrew Bible and the language also has supernatural powers.  
-                For more than two thousand years, in Judaism, Hebrew language has been referred to as <i>Lashon HaKodesh</i> (לשון הקודש),
+                that this is not just an ordinary language, it is the language of God and it should be used properly.
+                Many Jewish movements focused on studying the Hebrew language, for example Kabbalah, the esoteric Jewish
+                mysticism, talks about a secret language code hidden in the Hebrew Bible and the language also has
+                supernatural powers.
+                For more than two thousand years, in Judaism, Hebrew language has been referred to as <i>Lashon
+                    HaKodesh</i> (לשון הקודש),
                 "the holy language" or "the language of holiness”.
-                Out of respect for the holy language, many ultra-orthodox currently only use it for prayer and liturgy, 
+                Out of respect for the holy language, many ultra-orthodox currently only use it for prayer and liturgy,
                 while using Yiddish, Ladino and other languages and dialects for day to day communication.
             </p>
 
             <h2> Revival of the Hebrew Language</h2>
             <p>
-                Throughout the past centuries, there have been many attempts to revive the Hebrew language, the most 
-                successful one was in the 19th century, when Eliezer Ben-Yehuda joined the Jewish national movement, also 
-                known as Zionism, and he immigrated to Palestine, that was part of the Ottoman Empire. He helped establish schools
-                where Hebrew was taught and he developped tools that made the literary and liturgical Hebrew into a spoken
-                language. This whole process also included borrowing words from several European languages for words that
-                did not exist in Hebrew. Ahad Ha'Am also plays a part in this revival process, he founds the Hebrew monthly
-                <i> Ha-Shiloaḥ</i>, Hebrew language literary journa at the beginning of twentieth century which is published in Warsaw. 
+                Throughout the past centuries, there have been many attempts to revive the Hebrew language, the most
+                successful one was in the 19th century, when Eliezer Ben-Yehuda joined the Jewish national movement,
+                also
+                known as Zionism, and he immigrated to Palestine, that was part of the Ottoman Empire. He helped
+                establish schools
+                where Hebrew was taught and he developped tools that made the literary and liturgical Hebrew into a
+                spoken
+                language. This whole process also included borrowing words from several European languages for words
+                that
+                did not exist in Hebrew. Ahad Ha'Am also plays a part in this revival process, he founds the Hebrew
+                monthly
+                <i> Ha-Shiloaḥ</i>, Hebrew language literary journa at the beginning of twentieth century which is
+                published in Warsaw.
 
             </p>
 
             <p>
-                After the fall of the Ottoman empire, the Brittish Mandate of Palestine started in 1920, this recognized Hebrew as one
-                of the three official languages, together with English and Arabic. This coincided with a huge wave of immigrants 
-                coming to the country, mainly as a result of first world war. Since everyone was speaking a different language, There
-                was a great need for people to communicate, this led to the establishment of the Academy of the Hebrew Language. 
-                Some Hassidic and ultra-orthodox Jews refused to speak Hebrew, as they considered the language to be holy and
-                it was blasphemeous to use it for ordinary communication. 
+                After the fall of the Ottoman empire, the Brittish Mandate of Palestine started in 1920, this recognized
+                Hebrew as one
+                of the three official languages, together with English and Arabic. This coincided with a huge wave of
+                immigrants
+                coming to the country, mainly as a result of first world war. Since everyone was speaking a different
+                language, There
+                was a great need for people to communicate, this led to the establishment of the Academy of the Hebrew
+                Language.
+                Some Hassidic and ultra-orthodox Jews refused to speak Hebrew, as they considered the language to be
+                holy and
+                it was blasphemeous to use it for ordinary communication.
             </p>
 
             <h2>Modern-day Hebrew</h2>
             <p>
                 According to <a href="https://en.wikipedia.org/wiki/Hebrew_language#Modern_Hebrew"
-                target="_blank">Wikipedia</a> around 53% of the Israeli population speaks Hebrew as a native
+                    target="_blank">Wikipedia</a> around 53% of the Israeli population speaks Hebrew as a native
                 language,
                 while most of the rest speak it fluently. Most of the other native languages spoken in Israel are
                 Russian, Arabic, French, English, Yiddish and Ladino.
-                There are ongoing efforts to keep Hebrew the main language in the state of Israel, the Academy for the Hebrew Language 
+                There are ongoing efforts to keep Hebrew the main language in the state of Israel, the Academy for the
+                Hebrew Language
                 invents around 2000 new Hebrew words each year as a way of promoting the language and
                 encouraging people to use Hebrew more and less words from international languages
                 such as English.
