Update media queries and edit code structure. Add more info to Readme file

--- a/index.html
+++ b/index.html
@@ -14,36 +14,38 @@
 </head>
 
 <body>
-    
-    <div id="header-image">
-    </div>
-    <header>
-        <nav id="menu">
-            <ul>
-                <li>
-                    <a href="index.html" class="active">Home</a>
-                </li>
-
-                <li>
-                    <a href="alphabet.html">The Hebrew Alphabet</a>
-                </li>
-
-                <li>
-                    <a href="words.html">Common Hebrew Words and Phrases</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-
-    <h1>The Hebrew Language</h1>
     <section>
+        <div id="header-image">
+        </div>
+        <header>
+            <nav id="menu">
+                <ul>
+                    <li>
+                        <a href="index.html" class="active">Home</a>
+                    </li>
+
+                    <li>
+                        <a href="alphabet.html">The Hebrew Alphabet</a>
+                    </li>
+
+                    <li>
+                        <a href="words.html">Common Hebrew Words and Phrases</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+    </section>
+
+    <section>
+        <h1>The Hebrew Language</h1>
 
         <div id="div-home-image">
             <img id="home-image" src="assets/images/dead-sea-scrolls-facsimile-edition-02.jpg"
                 alt="An image of a dead sea manuscript in Hebrew language">
-
         </div>
+    </section>
 
+    <section>
         <div class="main-container">
             <h2>Introduction to the Hebrew Language</h2>
             <br>
@@ -148,15 +150,8 @@
                 encouraging people to use Hebrew more and less words from international languages
                 such as English.
             </p>
-
-
-
         </div>
-
-
-
     </section>
-
 
     <footer class="main-footer">
         <ul>
@@ -177,8 +172,6 @@
         <p class="copyright"> © 2021 Cristina Onea</p>
 
     </footer>
-
-
 
 </body>
 
