Add media queries. Add main points fot the first two pages

--- a/alphabet.html
+++ b/alphabet.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> Do I need this line - it was added automatically in the boilerplate-->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hebrew Language is a page for people who want to learn about Hebrew language">
     <meta name="keywords" content="language, Hebrew language, Hebrew alphabet, language learning">
@@ -35,32 +36,41 @@
                 </ul>
             </nav>
 
-
-
-
     </header>
 
-
     <h1 id="logo">The Hebrew Alphabet</h1>
-
-
     <section>
         <div class="main-container">
-
-        
-            <br>
-
-            <div id="hebrew-alphabet-introduction">
-                <img id="manuscript-picture" src="assets/images/bereshit_1.jpg" alt="image of an illuminated Hebrew manuscript with red and blue being the 
+            <div id="alphabet-introduction">
+                <img id="alphabet-picture" src="assets/images/bereshit_1.jpg" alt="image of an illuminated Hebrew manuscript with red and blue being the 
                     dominant colours which contains the first passage from the Hebrew Bible in Hebrew language">
-
             </div>
+            <h2 id="main-points">Main points</h2>
+            <ul>
+                <li>
+                    <a href="#intro-alphabet">Introduction to the Hebrew Alphabet</a>
+                </li>
+                <li>
+                    <a href="#hebrew-letters">The Hebrew Letters</a>
+                </li>
+                <li>
+                    <a href="#table">Hebrew alphabet table</a>
+                </li>
+                <li>
+                    <a href="#vowels-dots">Vowels and Dots</a>
+                </li>
+                <li>
+                    <a href="#pronunciation">Pronunciation</a>
+                </li>
+                <li>
+                    <a href="#practice">Listening and speaking practice</a>
+                </li>
+            </ul>
 
-            <br>
-            <br>
-
+            <h2 id="intro-alphabet">Introduction to the Hebrew Alphabet</h2>
             <p>
-                The Hebrew Alphabet, has been used throughout the past two-three millennia mainly as script for Biblical Hebrew, modern
+                The Hebrew Alphabet, has been used throughout the past two-three millennia mainly as script for Biblical
+                Hebrew, modern
                 Hebrew, Jewish Aramaic, Yiddish, and Ladino, and also some Judean-Arabic and Judean-Persian
                 dialects.
             </p>
@@ -80,8 +90,7 @@
                 Jewish sages as Ashurit (lit. "Assyrian script") since its origins were alleged to be from Assyria.
             </p>
 
-            <h2>The Hebrew Letters</h2>
-
+            <h2 id="hebrew-letters">The Hebrew Letters</h2>
             <p>
                 The Hebrew Alphabet consists of 22 letters, all consonants, it does not have case – there’s no
                 distinction between uppercase and lowercase letters. Hebrew is written from right to left. Five letters
@@ -94,7 +103,6 @@
 
             <h3 class="clear">Dagesh</h3>
             <p>
-
                 In modern Hebrew, the dagesh (lit. emphasis) is an accent placed in the middle of a letter that changes
                 the pronunciation of ב‎ bet, כ‎ kaf, and פ‎ pe into [v], [ch] and [f]. We've added a column for
                 pronunciation without dagesh so it's easy to see the difference between the sounds.
@@ -125,22 +133,8 @@
                 </ul>
             </p>
 
-            <h3>Pronunciation</h3>
-            <p>
-                There are a lot of differences in pronunciation in modern Hebrew among native and non-native speakers.
-                For example, Ashkenazi Jews, Jewish people who have European
-                ancestry, don't pronounce most of the guttural letters. Arab Israelis and Jewish people that are
-                originally from Arabic speaking countries - mainly Sephardi and Mizrahi Jews - are able to pronounce the
-                guttural letters more
-                accurately. When learning Hebrew, it's best not to focus too much on pronunciation of guttural letters
-                or other types of letters since non-natives usually cannot correctly pronounce these more specific
-                sounds. Unless you
-                speak a Semitic language or a language that has similar sounds, our advice is to not trouble yourself
-                too much with the exact pronunciation and just enjoy the learning process!
-            </p>
-
+            <h2 id="table">Hebrew alphabet table</h2>
             <div id="alphabet-table">
-
                 <table>
 
                     <tr>
@@ -319,16 +313,20 @@
 
                     </tr>
 
-
                 </table>
-
 
             </div>
 
-            <br>
+            <h3>Gematria</h3>
+            <p>
+                Hebrew letters have numerical values. Like the Roman numerals, letters are added together to equal a
+                given number, and the letters retain their essential worth no matter where they are placed in a
+                sequence, so tav, kaf, and aleph, for example, equal 421. This system is called Gematria in Judaism.
+                In modern Israel, western numerals are used as a rule, whereas Hebrew letters are used for days of the
+                week or dates in the Hebrew calendar.
+            </p>
 
-
-            <h3>Vowels</h3>
+            <h2 id="vowels-dots">Vowels and Dots</h2>
             <p>
                 Hebrew language has a system of dots and diacritics that helps readers determine where vowels
                 are and how to pronounce words - this is called <i>Niqqud</i>. This was developed historically by the
@@ -340,7 +338,13 @@
                 Tanakh).
                 In writing, these are only used to teach children or beginners Hebrew, in religious texts such
                 as prayer books or the Hebrew Bible and in borrowed words.
-
+            </p>
+            <h3><i>Mater Lectionis</i> (from Latin "mothers of reading")</h3>
+            <p>
+                There are 4 weak consonants that act as vowels in Hebrew, these are Aleph, Hey, Vav and Yud.
+                They are
+                used in combination with diacritics or vowels - usually Aleph and Ayin are mute and only
+                indicate that the letter should be pronounced as a vowel.
             </p>
 
             <div>
@@ -351,7 +355,21 @@
 
             </div>
 
-            <h3>Listening and speaking practice</h3>
+            <h2 id="pronunciation">Pronunciation</h2>
+            <p>
+                There are a lot of differences in pronunciation in modern Hebrew among native and non-native speakers.
+                For example, Ashkenazi Jews, Jewish people who have European
+                ancestry, don't pronounce most of the guttural letters. Arab Israelis and Jewish people that are
+                originally from Arabic speaking countries - mainly Sephardi and Mizrahi Jews - are able to pronounce the
+                guttural letters more
+                accurately. When learning Hebrew, it's best not to focus too much on pronunciation of guttural letters
+                or other types of letters since non-natives usually cannot correctly pronounce these more specific
+                sounds. Unless you
+                speak a Semitic language or a language that has similar sounds, our advice is to not trouble yourself
+                too much with the exact pronunciation and just enjoy the learning process!
+            </p>
+
+            <h2 id="practice">Listening and speaking practice</h2>
             <p>When learning a new language, the best thing is to listen and try to repeat the letters and words as you
                 learn
                 them. So, a Hebrew lesson wouldn't be complete without pronunciation practice. See the links below to
@@ -375,24 +393,6 @@
                     </li>
                 </ul>
             </p>
-
-            <h3><i>Mater Lectionis</i> (from Latin "mothers of reading")</h3>
-            <p>
-                There are 4 weak consonants that act as vowels in Hebrew, these are Aleph, Hey, Vav and Yud.
-                They are
-                used in combination with diacritics or voewls - usually Aleph and Ayin are mute and only
-                indicate that the letter should be pronounced as a vowel.
-            </p>
-
-            <h3>Gematria</h3>
-            <p>
-                Hebrew letters have numerical values. Like the Roman numerals, letters are added together to equal a
-                given number, and the letters retain their essential worth no matter where they are placed in a
-                sequence, so tav, kaf, and aleph, for example, equal 421. This system is called Gematria in Judaism.
-                In modern Israel, western numerals are used as a rule, whereas Hebrew letters are used for days of the
-                week or dates in the Hebrew calendar.
-            </p>
-
 
         </div>
 
