--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> Do I need this line - it was added automatically in the boilerplate-->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hebrew Language is a page for people who want to learn about Hebrew language">
     <meta name="keywords" content="language, Hebrew language, Hebrew alphabet, language learning">
@@ -23,11 +24,9 @@
                     <li>
                         <a href="index.html" class="active">Home</a>
                     </li>
-
                     <li>
                         <a href="alphabet.html">The Hebrew Alphabet</a>
                     </li>
-
                     <li>
                         <a href="words.html">Common Hebrew Words and Phrases</a>
                     </li>
@@ -38,7 +37,6 @@
 
     <section>
         <h1>The Hebrew Language</h1>
-
         <div id="div-home-image">
             <img id="home-image" src="assets/images/dead-sea-scrolls-facsimile-edition-02.jpg"
                 alt="An image of a dead sea manuscript in Hebrew language">
@@ -47,8 +45,24 @@
 
     <section>
         <div class="main-container">
-            <h2>Introduction to the Hebrew Language</h2>
-            <br>
+
+            <h2>Main points</h2>
+            <ul>
+                <li>
+                    <a href="#introduction">Introduction to the Hebrew Language</a>
+                </li>
+                <li>
+                    <a href="#Lashon HaKodesh"><i>Lashon HaKodesh</i> - Hebrew as a holy language</a>
+                </li>
+                <li>
+                    <a href="#revival">Revival of the Hebrew Language</a>
+                </li>
+                <li>
+                    <a href="#modern-day">Modern-day Hebrew</a>
+                </li>
+            </ul>
+
+            <h2 id="introduction">Introduction to the Hebrew Language</h2>
             <p>
                 Hebrew (עִבְרִית‎) is a Northwest Semitic language (or Northern Central), that belongs to the
                 Afroasiatic language family. Historically, it is regarded as the language of the Israelites, Judeans
@@ -89,7 +103,7 @@
                 the time of the Babylonian captivity.
 
             </p>
-            <h2><i>Lashon HaKodesh</i> - Hebrew as a holy language</h2>
+            <h2 id="Lashon HaKodesh"><i>Lashon HaKodesh</i> - Hebrew as a holy language</h2>
             <p> Hebrew stopped being used as a day to day language over two millennia ago, and it was only mainly used
                 for religious activities and for liturgy. According to Genesis, God created the world using words, which
                 meant that the Hebrew language is holy.
@@ -105,7 +119,7 @@
                 while using Yiddish, Ladino and other languages and dialects for day to day communication.
             </p>
 
-            <h2> Revival of the Hebrew Language</h2>
+            <h2 id="revival">Revival of the Hebrew Language</h2>
             <p>
                 Throughout the past centuries, there have been many attempts to revive the Hebrew language, the most
                 successful one was in the 19th century, when Eliezer Ben-Yehuda joined the Jewish national movement,
@@ -137,7 +151,7 @@
                 it was blasphemeous to use it for ordinary communication.
             </p>
 
-            <h2>Modern-day Hebrew</h2>
+            <h2 id="modern-day">Modern-day Hebrew</h2>
             <p>
                 According to <a href="https://en.wikipedia.org/wiki/Hebrew_language#Modern_Hebrew"
                     target="_blank">Wikipedia</a> around 53% of the Israeli population speaks Hebrew as a native
