--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> Do I need this line - it was added automatically in the boilerplate-->
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hebrew Language is a page for people who want to learn about Hebrew language">
     <meta name="keywords" content="language, Hebrew language, Hebrew alphabet, language learning">
@@ -15,26 +14,23 @@
 </head>
 
 <body>
-    <section>
-        <div id="header-image">
-        </div>
-        <header>
-            <nav id="menu">
-                <ul>
-                    <li>
-                        <a href="index.html" class="active">Home</a>
-                    </li>
-                    <li>
-                        <a href="alphabet.html">The Hebrew Alphabet</a>
-                    </li>
-                    <li>
-                        <a href="words.html">Common Hebrew Words and Phrases</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-    </section>
-
+    <div id="header-image">
+    </div>
+    <header>
+        <nav id="menu">
+            <ul>
+                <li>
+                    <a href="index.html" class="active">Home</a>
+                </li>
+                <li>
+                    <a href="alphabet.html">The Hebrew Alphabet</a>
+                </li>
+                <li>
+                    <a href="words.html">Common Hebrew Words and Phrases</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <section>
         <h1>The Hebrew Language</h1>
         <div id="div-home-image">
@@ -42,10 +38,8 @@
                 alt="An image of a dead sea manuscript in Hebrew language">
         </div>
     </section>
-
     <section>
         <div class="main-container">
-
             <h2>Main points</h2>
             <ul>
                 <li>
@@ -61,7 +55,6 @@
                     <a href="#modern-day">Modern-day Hebrew</a>
                 </li>
             </ul>
-
             <h2 id="introduction">Introduction to the Hebrew Language</h2>
             <p>
                 Hebrew (עִבְרִית‎) is a Northwest Semitic language (or Northern Central), that belongs to the
@@ -70,7 +63,6 @@
                 example of a revived dead language, and one of only two Northwest Semitic languages still spoken,
                 the other being Aramaic.
             </p>
-
             <p>
                 Hebrew ceased to be an everyday spoken language sometime between 200 and 400 CE, declining in the
                 aftermath of the Bar Kokhba revolt. Aramaic and, to a lesser extent, Greek were already in use as
@@ -83,9 +75,7 @@
                 In 2013, Modern Hebrew was spoken by over nine million people worldwide. After Israel, the United
                 States has the second largest Hebrew-speaking population, with about 220,000 fluent speakers, mostly
                 from Israel.
-
             </p>
-
             <p>
                 Modern Hebrew is the official language of the State of Israel, while premodern or Biblical Hebrew
                 (in Hebrew <i>Ivrit Tanakhit</i>) is used for prayer or study in Jewish communities around the world
@@ -101,7 +91,6 @@
                 of
                 its present form in the dialect that scholars believe flourished around the 6th century BCE, around
                 the time of the Babylonian captivity.
-
             </p>
             <h2 id="Lashon HaKodesh"><i>Lashon HaKodesh</i> - Hebrew as a holy language</h2>
             <p> Hebrew stopped being used as a day to day language over two millennia ago, and it was only mainly used
@@ -118,7 +107,6 @@
                 Out of respect for the holy language, many ultra-orthodox currently only use it for prayer and liturgy,
                 while using Yiddish, Ladino and other languages and dialects for day to day communication.
             </p>
-
             <h2 id="revival">Revival of the Hebrew Language</h2>
             <p>
                 Throughout the past centuries, there have been many attempts to revive the Hebrew language, the most
@@ -132,32 +120,30 @@
                 that
                 did not exist in Hebrew. Ahad Ha'Am also plays a part in this revival process, he founds the Hebrew
                 monthly
-                <i> Ha-Shiloaḥ</i>, Hebrew language literary journa at the beginning of twentieth century which is
+                <i> Ha-Shiloaḥ</i>, Hebrew language literary journal at the beginning of twentieth century which is
                 published in Warsaw.
-
             </p>
-
             <p>
-                After the fall of the Ottoman empire, the Brittish Mandate of Palestine started in 1920, this recognized
+                After the fall of the Ottoman empire, the British Mandate of Palestine started in 1920, this recognized
                 Hebrew as one
-                of the three official languages, together with English and Arabic. This coincided with a huge wave of
+                of the three official languages, together with English and Arabic. This event coincided with a huge wave
+                of
                 immigrants
-                coming to the country, mainly as a result of first world war. Since everyone was speaking a different
-                language, There
+                coming to the country, mainly because of first world war. Since everyone was speaking a different
+                language, there
                 was a great need for people to communicate, this led to the establishment of the Academy of the Hebrew
                 Language.
                 Some Hassidic and ultra-orthodox Jews refused to speak Hebrew, as they considered the language to be
                 holy and
-                it was blasphemeous to use it for ordinary communication.
+                it was blasphemous to use it for ordinary communication.
             </p>
-
             <h2 id="modern-day">Modern-day Hebrew</h2>
             <p>
                 According to <a href="https://en.wikipedia.org/wiki/Hebrew_language#Modern_Hebrew"
                     target="_blank">Wikipedia</a> around 53% of the Israeli population speaks Hebrew as a native
                 language,
                 while most of the rest speak it fluently. Most of the other native languages spoken in Israel are
-                Russian, Arabic, French, English, Yiddish and Ladino.
+                Russian, Arabic, French, English, Yiddish, and Ladino.
                 There are ongoing efforts to keep Hebrew the main language in the state of Israel, the Academy for the
                 Hebrew Language
                 invents around 2000 new Hebrew words each year as a way of promoting the language and
@@ -166,7 +152,6 @@
             </p>
         </div>
     </section>
-
     <footer class="main-footer">
         <ul>
             <li>
@@ -182,11 +167,8 @@
                     aria-label="Visit our Instagram page (opens in a new tab)">Instagram</a>
             </li>
         </ul>
-
         <p class="copyright"> © 2021 Cristina Onea</p>
-
     </footer>
-
 </body>
 
 </html>
