--- a/words.html
+++ b/words.html
@@ -3,54 +3,40 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> Do I need this line - it was added automatically in the boilerplate-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hebrew Language is a page for people who want to learn about Hebrew language">
     <meta name="keywords" content="language, Hebrew language, Hebrew alphabet, language learning">
     <link rel="stylesheet" href="assets/css/normalize.css">
 
     <link rel="stylesheet" href="assets/css/style.css">
-
     <title>Hebrew Language</title>
 </head>
 
 <body>
     <header>
-
         <nav id="menu">
             <nav>
                 <ul>
-
-
                     <li>
                         <a href="index.html">Home</a>
                     </li>
-
                     <li>
                         <a href="alphabet.html">The Hebrew Alphabet</a>
                     </li>
-
                     <li>
                         <a href="words.html" class="active">Common Hebrew Words and Phrases</a>
                     </li>
                 </ul>
             </nav>
-
-
     </header>
-
-
-    <h1>Common Hebrew Phrases</h1>
-
     <section>
+        <h1>Common Hebrew Phrases</h1>
         <div id="container-words-page">
-
             <div id="words-introduction">
                 <img id="words-picture" src="assets/images/word-shalom-manuscript.jpg"
                     alt="image from an old manuscript of the word Shalom which means Peace in Hebrew">
-
             </div>
-
             <h2>Hebrew Root Words</h2>
             <p>
                 One of the most important things to know about the Hebrew language is that most words derive from a
@@ -59,32 +45,26 @@
                 speech
                 like nouns, verbs and adjectives.
             </p>
-
             <h2> <i>Shalom</i> (שָׁלוֹם)</h2>
             <p>
                 Shalom is perhaps the most well-known Hebrew word. It means hello, goodbye, and peace.
                 It is also found in the saying <i>Shalom Aleichem</i> (Hebrew: שָׁלוֹם עֲלֵיכֶם‎, 'Peace be upon
                 you') which is also a traditional song sung by Jews every Friday night upon returning home
                 from synagogue prayer on the eve of the Shabbat.
-
             </p>
-
             <h2><i>Ken</i> (כֵּן) and <i>Lo</i> (לֹא)</h2>
             <p>
                 <i>Ken</i> means Yes and <i>Lo</i> means No - we can see this in the famous brand Kenvelo – which
                 literally
                 means Yes and No (<i>ve</i> means 'and').
             </p>
-
             <h2 class="clear"><i>Slicha</i> (סְלִיחָה)</h2>
             <p><i>Slicha</i> means sorry or excuse me.</p>
-
             <h2><i>Toda</i> (תּוֹדָה)</h2>
             <p>
                 <i>Toda</i> means thank you it’s used often in the phrase <i>Toda raba</i> meaning thank you very
                 much.
             </p>
-
             <h2><i>BeVakasha</i> (בְּבַקָּשָׁה)</h2>
             <p>
                 In Hebrew <i>BeVakasha</i> is used as a way of saying 'with pleasure' or 'you're welcome' and 'please'.
@@ -93,39 +73,31 @@
                 someone
                 using <i>BeVakasha</i> in the sentence.
             </p>
-
-
             <div class="clearfix">
                 <img id="second-image" src="assets/images/hebrew-letters-unsplash.jpg"
                     alt="This image shows a magnifying glass placed on Hebrew text to make the letters look bigger">
-
-
-
                 <h2><i>Mayim</i> (מַיִם)</h2>
                 <p>
                     <i>Mayim</i> means 'water' – the interesting fact about Mayim is that’s it’s a dual noun. Dual nouns
                     in Hebrew usually have no singular form.
                 </p>
-
                 <h2><i>Shamayim</i> (שָׁמַיִם)</h2>
                 <p>
                     A similar dual noun is <i>Shamayim</i> which means 'heavens' or 'skies'.
                 </p>
-
                 <h2><i>Mazel Tov</i> (מַזָּל טוֹב)</h2>
                 <p>
                     <i>Mazel Tov</i> literally means 'good luck' and 'congratulations'. It's something people say to
                     someone getting married.
                 </p>
-
                 <h2><i>Ma Shlomcha?</i> (מָה שְׁלוֹמְךָ)</h2>
                 <p>
-                    This is a way of asking someone 'How are you?', it literally means 'what (is) your peace?'. You probably
+                    This is a way of asking someone 'How are you?', it literally means 'what (is) your peace?'. You
+                    probably
                     notice the word <i>Shalom</i> in <i>Shlomcha</i> because there are from the same Hebrew root
-                    <i>Shalem</i> (שָׁלֵם) that means 'whole' and 'complete'. Similarly, <i>Ma Nishma</i> (מָה נִשְׁמַע) means 'What's up?'.
-                
+                    <i>Shalem</i> (שָׁלֵם) that means 'whole' and 'complete'. Similarly, <i>Ma Nishma</i> (מָה נִשְׁמַע)
+                    means 'What's up?'.
                 </p>
-
                 <h2><i>Baruch HaShem</i> (בָּרוּךְ הַשֵּׁם)</h2>
                 <p>
                     It literally means 'Blessed be the name' where name refers to God, in Judaism you're not supposed
@@ -136,56 +108,38 @@
                     say you
                     accept a certain situation.
                 </p>
-
                 <h2><i>Kol HaKavod</i> (כָּל הַכָּבוֹד)</h2>
                 <p>
                     'Good job' or 'well done' (lit: all the respect).
                 </p>
-
                 <h2><i>Beseder</i> (בְּסֵדֶר)</h2>
                 <p>
-                    <i>Beseder</i> is used in many phrases to express that something or someone is OK. For example, <i>HaKol Beseder</i>
-                    (הַכֹּל בְּסֵדֶר) means 'everything is OK', whereas <i>Yihye BeSeder</i> (יִהְיֶה בְּסֵדֶר) means 'It will be OK' or 'no worries'.
+                    <i>Beseder</i> is used in many phrases to express that something or someone is OK. For example,
+                    <i>HaKol Beseder</i>
+                    (הַכֹּל בְּסֵדֶר) means 'everything is OK', whereas <i>Yihye BeSeder</i> (יִהְיֶה בְּסֵדֶר) means
+                    'It will be OK' or 'no worries'.
                 </p>
-
                 <h2><i>Chaval al Ha’Zman</i> (חֲבָל עַל הַזְּמַן)</h2>
                 <p>
                     It literally means 'a waste of time' but it can have various meanings, colloquially, it means
                     'forget it' and in slang it can also be used as an expletive 'great' or 'wonderful'.
                 </p>
-
-                <h2>
-
-                </h2>
-
                 <h2><i>Nu</i> </h2>
-                <p><i>Nu</i> is a two-letter words that is used often in slang, it means 'So?', 'c’mon already', 'go on'. </p>
-
+                <p><i>Nu</i> is a two-letter words that is used often in slang, it means 'So?', 'c’mon already', 'go
+                    on'. </p>
                 <h2><i>Chutzpah</i> חֻצְפָּה </h2>
                 <p>
-                    This slang word comes from Yiddish, and it means 'nerve', 'audacity'. 
+                    This slang word comes from Yiddish, and it means 'nerve', 'audacity'.
                 </p>
                 <h2><i>Sababa</i> סַבָּבָּה</h2>
                 <p>This word comes from Arabic and it's a slang way of saying 'cool' or 'awesome'</p>
-
-                <h2><i>Yalla</i> יַאלְלָה</h2> 
+                <h2><i>Yalla</i> יַאלְלָה</h2>
                 <p>
                     This slang word comes from Arabic as well and it means 'let's go', 'go ahead'.
                 </p>
-
-
-
             </div>
-
         </div>
-
-
-
-
-
-
     </section>
-
 
     <footer class="main-footer">
         <ul>
@@ -202,11 +156,8 @@
                     aria-label="Visit our Instagram page (opens in a new tab)">Instagram</a>
             </li>
         </ul>
-
         <p class="copyright"> © 2021 Cristina Onea</p>
-
     </footer>
-
-
-
 </body>
+
+</html>
