Add more media queries in style.css. Update readme file

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a href="#introduction">Introduction to the Hebrew Language</a>
                 </li>
                 <li>
-                    <a href="#Lashon HaKodesh"><i>Lashon HaKodesh</i> - Hebrew as a holy language</a>
+                    <a href="#Lashon-HaKodesh"><i>Lashon HaKodesh</i> - Hebrew as a holy language</a>
                 </li>
                 <li>
                     <a href="#revival">Revival of the Hebrew Language</a>
@@ -92,7 +92,7 @@
                 its present form in the dialect that scholars believe flourished around the 6th century BCE, around
                 the time of the Babylonian captivity.
             </p>
-            <h2 id="Lashon HaKodesh"><i>Lashon HaKodesh</i> - Hebrew as a holy language</h2>
+            <h2 id="Lashon-HaKodesh"><i>Lashon HaKodesh</i> - Hebrew as a holy language</h2>
             <p> Hebrew stopped being used as a day to day language over two millennia ago, and it was only mainly used
                 for religious activities and for liturgy. According to Genesis, God created the world using words, which
                 meant that the Hebrew language is holy.
