Edit media queries code and add background image for mobile

--- a/alphabet.html
+++ b/alphabet.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Hebrew Language is a page for people who want to learn about Hebrew language">
         <meta name="keywords" content="language, Hebrew language, Hebrew alphabet, language learning">
@@ -25,7 +25,7 @@
                         <a href="alphabet.html" class="active">The Hebrew Alphabet</a>
                     </li>
                     <li>
-                        <a href="words.html">Common Hebrew Words and Phrases</a>
+                        <a href="words.html">Common Hebrew Phrases</a>
                     </li>
                 </ul>
             </nav>
@@ -37,7 +37,7 @@
             <img id="alphabet-picture" src="assets/images/bereshit_1.jpg" alt="image of an illuminated Hebrew manuscript with red and blue being the 
                     dominant colours which contains the first passage from the Hebrew Bible in Hebrew language">
         </div>
-        <h2 id="main-points">Main points</h2>
+        <h2>Main points</h2>
         <ul>
             <li>
                 <a href="#intro-alphabet">Introduction to the Hebrew Alphabet</a>
