--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="alphabet.html">The Hebrew Alphabet</a>
                 </li>
                 <li>
-                    <a href="words.html">Common Hebrew Words and Phrases</a>
+                    <a href="words.html">Common Hebrew Phrases</a>
                 </li>
             </ul>
         </nav>
