--- a/words.html
+++ b/words.html
@@ -25,7 +25,7 @@
                         <a href="alphabet.html">The Hebrew Alphabet</a>
                     </li>
                     <li>
-                        <a href="words.html" class="active">Common Hebrew Words and Phrases</a>
+                        <a href="words.html" class="active">Common Hebrew Phrases</a>
                     </li>
                 </ul>
             </nav>
