Edit source code on all pages and add info to readme file

--- a/alphabet.html
+++ b/alphabet.html
@@ -4,14 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Hebrew Language is a page for people who want to learn about Hebrew language">
-        <meta name="keywords" content="language, Hebrew language, Hebrew alphabet, language learning">
-        <link rel="stylesheet" href="assets/css/normalize.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hebrew Language is a page for people who want to learn about Hebrew language">
+    <meta name="keywords" content="language, Hebrew language, Hebrew alphabet, language learning">
+    <link rel="stylesheet" href="assets/css/normalize.css">
 
-        <link rel="stylesheet" href="assets/css/style.css">
-        <title>Hebrew Language</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Hebrew Language</title>
 </head>
+
+<!-- Navigation bar-->
 
 <body>
     <header>
@@ -29,8 +31,10 @@
                     </li>
                 </ul>
             </nav>
+        </nav>
     </header>
 
+    <!--Introduction and page menu-->
     <h1 id="logo">The Hebrew Alphabet</h1>
     <div class="main-container">
         <div id="alphabet-introduction">
@@ -67,11 +71,15 @@
         <p>
             Hebrew is an Abjad script, meaning a type of writing system where each symbol or letter stands
             for a consonant, leaving it to readers to infer or supply an appropriate vowel.
+        </p>
+        <p>
             There are various styles or scripts still in use currently, the present and most mainstream
             "Jewish script" or "square script", is a stylized form of the Aramaic alphabet and was
             technically known by Jewish sages as Ashurit (lit. "Assyrian script") since its origins were
             alleged to be from Assyria.
         </p>
+
+        <!--The Hebrew Letters-->
         <h2 id="hebrew-letters">The Hebrew Letters</h2>
         <p>
             The Hebrew Alphabet consists of 22 letters, all consonants, it does not have case – there’s no
@@ -80,8 +88,7 @@
         </p>
 
         <p>Aleph is the first letter of the alphabet and Beth is the second. In Hebrew, the alphabet is called
-            <i>Aleph-Bet</i>
-            (אָלֶפְבֵּית) to reflect the first two letters of the alphabet .
+            <i>Aleph-Bet</i> (אָלֶפְבֵּית) to reflect the first two letters of the alphabet.
         </p>
         <h3 class="clear">Dagesh</h3>
         <p>
@@ -111,6 +118,8 @@
                     obstructing airflow in the vocal tract, hence Aleph has no sound, it’s like a pause.</li>
             </ul>
         </p>
+
+        <!--Hebrew Alphabet Table-->
         <h2 id="table">Hebrew alphabet table</h2>
         <div id="alphabet-table">
             <table>
@@ -292,19 +301,24 @@
         <p>
             Hebrew letters have numerical values. Like the Roman numerals, letters are added together to equal a
             given number, and the letters retain their numerical value no matter where they are placed in a
-            sequence, so tav, kaf, and aleph, for example, equal 421. This system is called Gematria in Judaism.
-            In modern Israel, western numerals are used as a rule, whereas Hebrew letters are used for days of
-            the
-            week or dates in the Hebrew calendar.
+            sequence, so tav, kaf, and aleph, for example, equal 421.
         </p>
+        <p>
+            This system is called Gematria in Judaism.
+            In modern Israel, western numerals are used as a rule, whereas Hebrew letters are used for days of
+            the week or dates in the Hebrew calendar.
+        </p>
+
+        <!-- Vowels and Dots -->
         <h2 id="vowels-dots">Vowels and Dots</h2>
         <p>
             Hebrew language has a system of dots and diacritics that helps readers determine where vowels
             are and how to pronounce words - this is called <i>Niqqud</i>. This was developed historically by the
             Masoretes
-            (Jewish scribes and scholars) between the 5th and the 10th centuries. This was initially meant
-            to
-            standardize
+            (Jewish scribes and scholars) between the 5th and the 10th centuries.
+        </p>
+        <p>
+            This was initially meant to standardize
             pronunciation, paragraph, verse division and cantillation or chanting of the Hebrew Bible (the
             Tanakh).
             In writing, these are only used to teach children or beginners Hebrew, in religious texts such
@@ -324,6 +338,8 @@
             </p>
 
         </div>
+
+        <!-- Pronunciation section -->
         <h2 id="pronunciation">Pronunciation</h2>
         <p>
             There are a lot of differences in pronunciation in modern Hebrew among native and non-native speakers.
@@ -331,20 +347,24 @@
             ancestry, don't pronounce most of the guttural letters. Jewish people that are
             originally from Arabic speaking countries - mainly Sephardi and Mizrahi Jews - are able to pronounce the
             guttural letters more
-            accurately. When learning Hebrew, it's best not to focus too much on pronunciation of guttural letters
+            accurately.
+        </p>
+        <p>
+            When learning Hebrew, it's best not to focus too much on pronunciation of guttural letters
             or other types of letters since non-natives usually cannot correctly pronounce these more specific
-            sounds. Unless you
-            speak a Semitic language or a language that has similar sounds, our advice is to not trouble yourself
-            too much with the exact pronunciation and just enjoy the learning process!
+            sounds. Unless you speak a Semitic language or a language that has similar sounds, our advice is to not
+            trouble yourself too much with the exact pronunciation and just enjoy the learning process!
         </p>
         <h2 id="practice">Listening and speaking practice</h2>
         <p>When learning a new language, the best thing is to listen and try to repeat the letters and words as you
             learn
             them. So, a Hebrew lesson wouldn't be complete without pronunciation practice. See the links below to
             practice the Hebrew letters and vowels. We encourage you to say the letters out loud and practice them
-            yourself! Don't be discouraged
-            if you don't get it right initially, there are many letters in Hebrew that can be difficult for
-            non-native speakers to pronounce, the goal for now is to enjoy the learning process!
+            yourself!
+        </p>
+        <p>
+            Don't be discouraged if you don't get it right initially, there are many letters in Hebrew that can be
+            difficult for non-native speakers to pronounce, the goal for now is to enjoy the learning process!
         </p>
         <p>
             <ul>
@@ -355,7 +375,7 @@
                 </li>
                 <li>
                     <a href="https://www.youtube.com/watch?v=GrRuqF21myQ&ab_channel=LearnHebrewwithHebrewPod101.com"
-                        target="_blank">Vowel practice - YouTube video</a>
+                        target="_blank">Vowel practice - YouTube video</a>.
 
                 </li>
             </ul>
@@ -363,6 +383,7 @@
 
     </div>
 
+    <!-- Footer -->
     <footer class="main-footer">
         <ul>
             <li>
