--- a/words.html
+++ b/words.html
@@ -29,13 +29,13 @@
                     </li>
                 </ul>
             </nav>
+        </nav>
     </header>
     <section>
         <h1>Common Hebrew Phrases</h1>
         <div id="container-words-page">
             <div id="words-introduction">
-                <img id="words-picture" src="assets/images/word-shalom-manuscript.jpg"
-                    alt="image from an old manuscript of the word Shalom which means Peace in Hebrew">
+                <img id="words-picture" src="assets/images/word-shalom-manuscript.jpg" alt="Hebrew words in red colour">
             </div>
             <h2>Hebrew Root Words</h2>
             <p>
@@ -45,27 +45,27 @@
                 speech
                 like nouns, verbs and adjectives.
             </p>
-            <h2> <i>Shalom</i> (שָׁלוֹם)</h2>
+            <h2><i>Shalom</i> (שָׁלוֹם)</h2>
             <p>
                 Shalom is perhaps the most well-known Hebrew word. It means hello, goodbye, and peace.
                 It is also found in the saying <i>Shalom Aleichem</i> (Hebrew: שָׁלוֹם עֲלֵיכֶם‎, 'Peace be upon
                 you') which is also a traditional song sung by Jews every Friday night upon returning home
                 from synagogue prayer on the eve of the Shabbat.
             </p>
-            <h2><i>Ken</i> (כֵּן) and <i>Lo</i> (לֹא)</h2>
+            <h2 lang="he"><i>Ken</i> (כֵּן) and <i>Lo</i> (לֹא)</h2>
             <p>
                 <i>Ken</i> means Yes and <i>Lo</i> means No - we can see this in the famous brand Kenvelo – which
                 literally
                 means Yes and No (<i>ve</i> means 'and').
             </p>
-            <h2 class="clear"><i>Slicha</i> (סְלִיחָה)</h2>
-            <p><i>Slicha</i> means sorry or excuse me.</p>
-            <h2><i>Toda</i> (תּוֹדָה)</h2>
+            <h2 class="clear"><i>Slicha</i> (סְלִיחָה) </h2>
+            <p> <i>Slicha</i> means sorry or excuse me.</p>
+            <h2> <i>Toda</i> (תּוֹדָה)</h2>
             <p>
                 <i>Toda</i> means thank you it’s used often in the phrase <i>Toda raba</i> meaning thank you very
                 much.
             </p>
-            <h2><i>BeVakasha</i> (בְּבַקָּשָׁה)</h2>
+            <h2> <i>BeVakasha</i> (בְּבַקָּשָׁה)</h2>
             <p>
                 In Hebrew <i>BeVakasha</i> is used as a way of saying 'with pleasure' or 'you're welcome' and 'please'.
                 When someone says
@@ -75,8 +75,8 @@
             </p>
             <div class="clearfix">
                 <img id="second-image" src="assets/images/hebrew-letters-unsplash.jpg"
-                    alt="This image shows a magnifying glass placed on Hebrew text to make the letters look bigger">
-                <h2><i>Mayim</i> (מַיִם)</h2>
+                    alt="Hebrew letters in a manuscript">
+                <h2> <i>Mayim</i> (מַיִם)</h2>
                 <p>
                     <i>Mayim</i> means 'water' – the interesting fact about Mayim is that’s it’s a dual noun. Dual nouns
                     in Hebrew usually have no singular form.
