--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
     <title>Hebrew Language</title>
 </head>
 
+<!-- Header background image-->
+
 <body>
     <div id="header-image">
     </div>
+
+    <!-- Navigation bar -->
     <header>
         <nav id="menu">
             <ul>
@@ -31,6 +35,8 @@
             </ul>
         </nav>
     </header>
+
+    <!-- Home image -->
     <section>
         <h1>The Hebrew Language</h1>
         <div id="div-home-image">
@@ -38,6 +44,8 @@
                 alt="An image of a dead sea manuscript in Hebrew language">
         </div>
     </section>
+
+    <!--Page menu-->
     <section>
         <div class="main-container">
             <h2>Main points</h2>
@@ -55,6 +63,8 @@
                     <a href="#modern-day">Modern-day Hebrew</a>
                 </li>
             </ul>
+
+            <!-- Introduction -->
             <h2 id="introduction">Introduction to the Hebrew Language</h2>
             <p>
                 Hebrew (עִבְרִית‎) is a Northwest Semitic language (or Northern Central), that belongs to the
@@ -69,6 +79,8 @@
                 international languages, especially among elites, immigrants and generally the Jewish diaspora. Hebrew
                 survived into the medieval
                 period as the language of Jewish liturgy, rabbinic literature, intra-Jewish commerce, and poetry.
+            </p>
+            <p>
                 With the rise of Zionism in the 19th century, it was revived as a spoken and literary language,
                 becoming the main language of the Yishuv and subsequently of the State of Israel. Yishuv was the name
                 given to the body of Jewish residents prior to the establishment of the State of Israel in 1948.
@@ -81,7 +93,10 @@
                 (in Hebrew <i>Ivrit Tanakhit</i>) is used for prayer or study in Jewish communities around the world
                 today.
                 The Samaritan dialect is also the liturgical tongue of the Samaritans, while modern Hebrew or Arabic
-                is their vernacular. As a foreign language, Hebrew is one of the most studied languages in the world,
+                is their vernacular.
+            </p>
+            <p>
+                As a foreign language, Hebrew is one of the most studied languages in the world,
                 mostly by Jews and people with Jewish ancestry,
                 students who study Judaism and Israel, by archaeologists (specifically the ones who research the
                 Biblical period) and linguists
@@ -92,12 +107,16 @@
                 its present form in the dialect that scholars believe flourished around the 6th century BCE, around
                 the time of the Babylonian captivity.
             </p>
+
+            <!-- Main content-->
             <h2 id="Lashon-HaKodesh"><i>Lashon HaKodesh</i> - Hebrew as a holy language</h2>
             <p> Hebrew stopped being used as a day to day language over two millennia ago, and it was only mainly used
                 for religious activities and for liturgy. According to Genesis, God created the world using words, which
                 meant that the Hebrew language is holy.
                 This led to a mystification of the language in Judaism, which meant
                 that this is not just an ordinary language, it is the language of God and it should be used properly.
+            </p>
+            <p>
                 Many Jewish movements focused on studying the Hebrew language, for example Kabbalah, the esoteric Jewish
                 mysticism, talks about a secret language code hidden in the Hebrew Bible and the language also has
                 supernatural powers.
@@ -112,15 +131,16 @@
                 Throughout the past centuries, there have been many attempts to revive the Hebrew language, the most
                 successful one was in the 19th century, when Eliezer Ben-Yehuda joined the Jewish national movement,
                 also
-                known as Zionism, and he immigrated to Palestine, that was part of the Ottoman Empire. He helped
-                establish schools
-                where Hebrew was taught and he developped tools that made the literary and liturgical Hebrew into a
-                spoken
-                language. This whole process also included borrowing words from several European languages for words
-                that
-                did not exist in Hebrew. Ahad Ha'Am also plays a part in this revival process, he founds the Hebrew
-                monthly
-                <i> Ha-Shiloaḥ</i>, Hebrew language literary journal at the beginning of twentieth century which is
+                known as Zionism, and he immigrated to Palestine, that was part of the Ottoman Empire.
+            </p>
+            <p>
+                He helped establish schools where Hebrew was taught and he developped tools that made the literary and
+                liturgical Hebrew into a
+                spoken language. This whole process also included borrowing words from several European languages for
+                words
+                that did not exist in Hebrew. Ahad Ha'Am also plays a part in this revival process, he founds the Hebrew
+                monthly <i> Ha-Shiloaḥ</i>, Hebrew language literary journal at the beginning of twentieth century which
+                is
                 published in Warsaw.
             </p>
             <p>
@@ -129,13 +149,14 @@
                 of the three official languages, together with English and Arabic. This event coincided with a huge wave
                 of
                 immigrants
-                coming to the country, mainly because of first world war. Since everyone was speaking a different
-                language, there
+                coming to the country, mainly because of first world war.
+            </p>
+            <p>
+                Since everyone was speaking a different language, there
                 was a great need for people to communicate, this led to the establishment of the Academy of the Hebrew
                 Language.
                 Some Hassidic and ultra-orthodox Jews refused to speak Hebrew, as they considered the language to be
-                holy and
-                it was blasphemous to use it for ordinary communication.
+                holy and it was blasphemous to use it for ordinary communication.
             </p>
             <h2 id="modern-day">Modern-day Hebrew</h2>
             <p>
@@ -144,6 +165,8 @@
                 language,
                 while most of the rest speak it fluently. Most of the other native languages spoken in Israel are
                 Russian, Arabic, French, English, Yiddish, and Ladino.
+            </p>
+            <p>
                 There are ongoing efforts to keep Hebrew the main language in the state of Israel, the Academy for the
                 Hebrew Language
                 invents around 2000 new Hebrew words each year as a way of promoting the language and
@@ -152,6 +175,8 @@
             </p>
         </div>
     </section>
+
+    <!-- Footer -->
     <footer class="main-footer">
         <ul>
             <li>
